kubernetes/ingress-template.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: wordpress-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: $WORDPRESS_HOST_NAME
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wordpress
                port:
                  number: 80
